# claim-check

./: .gitignore  CONTEXT.md  README.md  alembic.ini  compliance-evaluation-quality-report.json  package-lock.json  package.json  pyproject.toml
.sandcastle/: .env.example  Dockerfile  implement-prompt-client.md  implement-prompt.md  main.mts  prompt.md  publish-compliance-issues.py  publish-compliance-issues.sh  publish-prompt-client.md  publish-prompt.md  review-prompt-client.md  review-prompt.md
alembic/: env.py
client/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: fix_frontend_imports.py  fix_frontend_imports2.py  fix_frontend_imports3.py  fix_same_domain_imports.py  repair_frontend_imports.py  restructure_backend.py  restructure_frontend_moves.py
tests/: conftest.py  golden_corpus.py  rule_scope_helpers.py  rule_test_case_golden_corpus.py  test_auth_rbac_audit_api.py  test_candidate_rule_citation_reconciliation.py  test_candidate_rule_review_api.py  test_compiled_rule_sets_api.py  test_compiled_rule_sets_compiler.py  test_compliance_audit_api.py  test_compliance_evaluation_aggregation.py  test_compliance_evaluation_currency_and_dates.py  test_compliance_evaluation_evaluator.py  test_compliance_evaluation_quality.py  test_compliance_evaluation_quality_api.py  test_compliance_evaluation_runs_api.py  test_compliance_evaluation_runs_store.py  test_compliance_review_api.py  test_compliance_review_decisions_api.py  test_config.py  test_document_sections.py  test_expense_input_fingerprint.py  test_expense_report_parsing.py  test_health_api.py  (+25 more)
(+316 files in other folders)
