[project]
name = "policy-pipeline"
version = "0.1.0"
description = "FastAPI service foundation for the Policy Pipeline MVP"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.0",
    "fastapi>=0.116.0",
    "pydantic-settings>=2.10.0",
    "python-multipart>=0.0.20",
    "psycopg[binary]>=3.2.0",
    "sqlalchemy>=2.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.4.0",
    "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/policy_pipeline"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
